...
            Spell(name = "Auge des Limbus", attribute1 = "MU", attribute2 = "KO", attribute3 = "KK"),
            Spell(name = "Aureolus Güldenglanz", attribute1 = "IN", attribute2 = "CH", attribute3 = "FF"),
            Spell(name = "Auris Nasus Oculus", attribute1 = "KL", attribute2 = "CH", attribute3 = "FF"),
            Spell(name = "Axxeleratus Blitzgeschwind", attribute1 = "KL", attribute2 = "GE", attribute3 = "KO"),
            Spell(name = "Balsam Salabunde", attribute1 = "KL", attribute2 = "IN", attribute3 = "CH"),
            Spell(name = "Band und Fessel", attribute1 = "KL", attribute2 = "CH", attribute3 = "KK"),
            Spell(name = "Bannbaladin", attribute1 = "IN", attribute2 = "CH", attribute3 = "CH"),
            Spell(name = "Bärenruhe Winterschlaf", attribute1 = "MU", attribute2 = "KK", attribute3 = "KO"),
            Spell(name = "Beherrschung brechen", attribute1 = "KL", attribute2 = "IN", attribute3 = "CH"),
            Spell(name = "Beschwörung vereiteln", attribute1 = "MU", attribute2 = "IN", attribute3 = "CH"),
            Spell(name = "Bewegung stören", attribute1 = "KL", attribute2 = "IN", attribute3 = "FF"),
            Spell(name = "Blendwerk", attribute1 = "IN", attribute2 = "CH", attribute3 = "GE"),
            Spell(name = "Blick aufs Wesen", attribute1 = "KL", attribute2 = "IN", attribute3 = "CH"),
...
            Spell(name = "Xenographus Schriftenkunde", attribute1 = "KL", attribute2 = "KL", attribute3 = "IN"),
            Spell(name = "Zagibu Ubigaz", attribute1 = "IN", attribute2 = "CH", attribute3 = "FF"),
            Spell(name = "Zauberklinge Geisterspeer", attribute1 = "KL", attribute2 = "FF", attribute3 = "KO"),
            
            // Hexenzauber
            Spell(name = "Große Gier", attribute1 = "KL", attribute2 = "KL", attribute3 = "CH"),
            Spell(name = "Hexenblick", attribute1 = "IN", attribute2 = "IN", attribute3 = "CH"),
            Spell(name = "Hexengalle", attribute1 = "MU", attribute2 = "IN", attribute3 = "CH"),
            Spell(name = "Hexenholz", attribute1 = "KL", attribute2 = "FF", attribute3 = "KK"),
            Spell(name = "Hexenkrallen", attribute1 = "MU", attribute2 = "IN", attribute3 = "KO"),
            Spell(name = "Katzenaugen", attribute1 = "KL", attribute2 = "FF", attribute3 = "KO"),
            Spell(name = "Koboldovision", attribute1 = "MU", attribute2 = "CH", attribute3 = "CH"),
            Spell(name = "Krähenruf", attribute1 = "MU", attribute2 = "CH", attribute3 = "CH"),
...
